[workspace]
resolver = "2"
members = [
    "flash-loan",
    "receiver-standard",
    "examples/simple",
    "examples/gba-simple",
    "flash-loan-vault",
    "proxy",
]

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true


[workspace.dependencies.soroban-sdk]
version = "0.6.0"
