[workspace]
resolver = "2"
members = [
    "flash-loan",
    "receiver-standard",
    "examples/simple",
    "examples/gba-simple",
    "vault",
    "proxy",
]

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true


[workspace.dependencies.soroban-sdk]
git = "https://github.com/stellar/rs-soroban-sdk"
rev = "29b505cf95f2fd4fbe639fdb163b606c44920837"
version = "0.7.0"


[workspace.dependencies.fixed-point-math]
version = "0.0.2"