[workspace]
resolver = "2"
members = [
    "flash-loan",
    "receiver-standard",
    "examples/simple",
    "vault",
    "vault-interface",
    "factory",
    "merged"
]

[workspace.package]
version = "0.1.0"

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true


[workspace.dependencies.soroban-sdk]
version = "0.8.4"


[workspace.dependencies.fixed-point-math]
version = "0.0.2"