[package]
name = "xycloans-factory"
description = "Factory contract for xycLoans."
homepage = "https://xycloans.xycloo.com/"
repository = "https://github.com/xycloo/xycloans"
authors = ["Tommaso De Ponti <tommaso@xycloo.com>"]
readme = "README.md"
version.workspace = true
edition = "2021"

[lib]
crate-type = ["cdylib"]


[dependencies]
soroban-sdk = { workspace = true }

[dev_dependencies]
soroban-sdk = { workspace = true, features=["testutils"] }


