[package]
name = "xycloans-factory"
description = "Factory contract for xycLoans."
homepage = "https://xycloans.xycloo.com/"
repository = "https://github.com/xycloo/xycloans"
authors = ["Tommaso De Ponti <tommaso@xycloo.com>"]
readme = "README.md"
version = "1.0.0-rc1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]

# Pluggable flash loans and vaults are not included by default 
default = []

pluggable = []

[dependencies]
soroban-sdk = { workspace = true }

[dev_dependencies]
soroban-sdk = { workspace = true, features=["testutils"] }


