[package]
name = "xycloans-flash-loan"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
fixed-point-math = { workspace = true }

[dev_dependencies]
soroban-sdk = { workspace = true, features=["testutils"] }
fixed-point-math = { workspace = true }
