[package]
name = "simple"
description = "Example xycLoans flash loan receiver contract."
homepage = "https://xycloans.xycloo.com/"
repository = "https://github.com/xycloo/xycloans"
authors = ["Tommaso De Ponti <tommaso@xycloans.com>"]
readme = "README.md"
edition = "2021"
version = "1.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev_dependencies]
soroban-sdk = { workspace = true, features=["testutils"] }
